# Prodigy

./: .gitignore  CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  Makefile  README.md  backscript  composition.csv  final.mid  hello  hello.cpp  install_mlpack.bash  install_mlpack_linux.sh  install_prodigy.bash  lstm.cpp  moc_piano.cpp  moc_predefs.h  noisysines.cpp  predict.cpp  rnn_ex.cpp  training.csv  translateback  translatescript  ui_piano.h
MP3 COMPOSITIONS/: Readme.txt
Translation/: Readme.txt  auclair1.csv  bach.csv  happy_bday.csv  header.csv  makefile  partition2.csv  test.csv  testtrans.cpp  testtrans3.cpp  text1.csv  translate.cpp  translate.hpp  translatebackv.cpp
Translation/Accuracy test/: tbach.csv  testtrans.cpp
build-piano-Desktop_Qt_5_12_0_GCC_64bit-Debug/: .qmake.stash  moc_piano.cpp  ui_piano.h
build1/: makeerror.txt
cmake/: CXX11.cmake  CreateArmaConfigInfo.cmake
compose/: input3.csv  input5.csv  input9.csv
midi_files/: piano_sonata_310_3_(c)oguri.mid  piano_sonata_330_1_(c)oguri.mid
midicsv-csvmidi/: .sonata.csv.swp  Makefile  csvmidi  csvnotes.csv  list  merge  merge.cpp  midicsv  otranslateb.csv  readme.txt  script  sonata.csv  test.csv
midicsv-csvmidi/csvs/: Readme.txt  bach_846 (1).mid.csv  bach_minuet (1).mid.csv  blank.csv  bwv806b (1).mid.csv  bwv806f.mid.csv  bwv807e.mid.csv  bwv808c (1).mid.csv  bwv808e (1).mid.csv  bwv808h (1).mid.csv  chords.csv  mozk281a.mid.csv  sonata.csv  sonata.mid.csv  startnotes.csv
midicsv-csvmidi/music/: Readme.txt  bwv808c (1).mid  bwv808h (1).mid  sonata.mid
mozart_midi/: piano_sonata_310_1_(c)oguri.mid  piano_sonata_330_2_(c)oguri.mid
music_gen/: bach_minuet (1).mid  bwv808e (1).mid
other/: lstm_ex.cpp  noisysines.cpp  rnn.cpp  rnn_ex.cpp
pianoGUI/: audios.qrc  compose.hpp  composegui.cpp  debug.cpp  main.cpp  piano.cpp  piano.cpp.autosave  piano.h  piano.pro  piano.pro.user.f6b5045  piano.rc  piano.ui  piano_dic.cpp
samples/: bach_easy.csv  yiruma.csv
script/: ReadMe  backscript  translatescript
src/: compose.cpp  compose.hpp  composegui.cpp  composeguih.cpp  composeguisave.cpp  composesilent.cpp  goodtrain.cpp  main.cpp  maincopy.cpp  silenttrain.cpp  train.cpp
test_rnn/: CMakeLists.txt  RNNConfig.h.in  equiv.txt  rnn.cpp
test_rnn/TestFunctions/: CMakeLists.txt
training data/: bach&DaftPunk.csv  partition.csv  readme.txt  river.csv
utils/: 200cycles.csv  20cycles.csv  275cycles.csv  2days.csv  40cycles.csv  485cycles.csv  composition3.csv  easy_cycle0.csv  longinvention.ods  lotsofbach.csv  mozart.csv  partition.csv  partition2.csv  rho5cycle100.csv  rho5cycle500.csv  river25.csv  river5.csv  sonata.csv  startnotes.csv  training.csv  verylongroot.csv
